[tool.poetry]
name = "pi_bench"
version = "0.1.0"
description = ""
authors = ["Ahmed Kamran <akamran@colgate.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
